# rmab-research

./: .gitignore  CMakeLists.txt  README.md  compress.txt  main.cpp  main.py  test.py  test_complexity.py  ump.txt  utils.py  vector.txt
.cache/clangd/index/: main.cpp.D824F0C71CCE3FCF.idx  utils.h.4979EB63475528D5.idx
cpp/: CMakeLists.txt  main.cpp  old_main.cpp
cpp/.cache/clangd/index/: dp.cpp.6E70D8AAF5FC1510.idx  dp.h.6CDC5B1EE0BFAE58.idx  io.cpp.98F4B4944D666101.idx  main.cpp.0834660474D4DE83.idx  matrix.cpp.B7229CEB2A4ED246.idx  matrix.h.E51F6B548EF969E9.idx  prob.cpp.F96A2006A70FBA12.idx  prob.h.506A213C97BBB365.idx  rmab.cpp.02C64BB5E5683EE5.idx  rmab.h.5707DD22EC0D30B5.idx  solve.cpp.CBF40868EA4FA0E8.idx  utils.h.17EB801CA0680CEF.idx
cpp/include/: dp.h  matrix.h  prob.h  rmab.h  utils.h
cpp/src/: dp.cpp  io.cpp  matrix.cpp  prob.cpp  rmab.cpp  solve.cpp  utils.cpp
examples/: ex1.in  ex2.in
include/: utils.h
py/: estimator.py  exp1.py  exp2.py  exp3.py  pdummy.py
